--- a/config/config.env
+++ b/config/config.env
@@ -1,6 +1,6 @@
-
-MONGO_URI=mongodb+srv://himanshumalik9917:gIJoRT2G0BjG1TMB@traveltapestry.dsdhvbv.mongodb.net/
+FRONTEND_URL=http://localhost:3000
+MONGO_URI=mongodb+srv://himanshumalik9917:gIJoRT2G0BjG1TMB@traveltapestry.dsdhvbv.mongodb.net/?retryWrites=true&w=majority&appName=traveltapestry
 JWT_SECRET=1234567890
-PORT=4000
+PORT=3002
 JWT_EXPIRES=7d
 COOKIE_EXPIRES=7
